Section 13 Resources - Ingress/http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deployment
  labels:
    app: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
      - name: httpd
        image: httpd
