Section 13 Resources - Ingress/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deployment-1
  labels:
    app: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: nextcloud
        image: nextcloud
