Section 13 Resources - Ingress/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  selector:
    app: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
