Section 13 Resources - Ingress/nextcloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-svc
spec:
  selector:
    app: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
